wrap fetchPokemon block in useEffect hook to stop rendering duplication

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,13 @@
   --highlighted-card-color: rgb(90, 136, 189);
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-evenly;
+}
+
 html {
   font-size: 62.5%;
 }
